# rust-paillier

./: Cargo.toml  README.md
benches/: algo.rs  arith.rs  cri-enc.rs  crt.rs  encryption.rs  helpers.rs  keygen.rs  macros.rs  matrix.rs  proof.rs
examples/: basic.rs  core.rs  keys.rs  matrix.rs  packed.rs  specific.rs
src/: core.rs  keygen.rs  lib.rs  macros.rs  serialize.rs  traits.rs
src/arithimpl/: frampimpl.rs  gmpimpl.rs  mod.rs  numimpl.rs  primes.rs  rampimpl.rs  traits.rs
src/coding/: mod.rs  packing.rs
src/coding/integral/: mod.rs  scalar.rs  vector.rs
src/core/: crt.rs  generic.rs  keygen.rs  mod.rs  standard.rs
src/encoding/: integral.rs  mod.rs
src/proof/: correct_key.rs  correct_opening.rs  range_proof.rs  range_proof_ni.rs
