[package]
name = "paillier"
version = "0.1.8-pre"
authors = [
  "Mario Cornejo <mario.cornejo@snips.ai>",
  "Morten Dahl <morten.dahl@snips.ai>",
  "Mathieu Poumeyrol <mathieu.poumeyrol@snips.ai>"
]
description = "A pure-Rust implementation of the Paillier encryption scheme"
keywords = [
  "Paillier",
  "homomorphic",
  "cryptography",
  "secure-computation",
  "mpc",
]
homepage = "https://github.com/snipsco/rust-paillier"
repository = "https://github.com/snipsco/rust-paillier"
documentation = "https://docs.rs/paillier"
license = "MIT/Apache-2.0"
categories = ["cryptography"]

[badges]
travis-ci = { repository = "snipsco/rust-paillier" }

[features]
default = ["inclramp", "defaultramp", "keygen"]
keygen = []
inclramp = ["ramp"]
inclnum = ["num"]
inclgmp = ["rust-gmp"]
defaultramp = []
defaultnum = []
defaultgmp = []

[dependencies]
rand = "0.8"
num-traits = "0.2"
ramp = { git="https://github.com/Discreater/ramp.git", optional=true }
num = { version="0.4", optional=true, features=["rand"] }
rust-gmp = { version="0.5", optional=true }
rug = { version="1.14", optional=true }

[dev-dependencies]
bencher = "0.1"

[[bench]]
name = "encryption"
harness = false

[[bench]]
name = "crt"
harness = false

[[bench]]
name = "keygen"
harness = false

[[bench]]
name = "arith"
harness = false

[[bench]]
name = "algo"
harness = false
